# web/static/swagger.json
@@ -4964,7 +4964,7 @@
                     "type": "string"
                 },
                 "port": {
-                    "type": "integer"
+                    "type": "string"
                 }
             }
         },
@@ -5515,10 +5515,22 @@
                 "player_ip": {
                     "type": "string"
                 },
+                "player_name": {
+                    "type": "string"
+                },
                 "server_address": {
                     "type": "string"
                 },
+                "server_id": {
+                    "type": "string"
+                },
+                "server_ip": {
+                    "type": "string"
+                },
                 "server_name": {
+                    "type": "string"
+                },
+                "server_port": {
                     "type": "string"
                 },
                 "token": {
